--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@ th {
     <th>Savings</th>
   </tr>
   <tr>
-    <td>Peter</td>
-    <td>Griffin</td>
-    <td>$100</td>
+    <td>Melanie</td>
+    <td>Vega</td>
+    <td>4-I</td>
   </tr>
   <tr>
     <td>Lois</td>
